# plugins_owners

./: .gitignore  BUILD  Jenkinsfile  MODULE.bazel  README.md  WORKSPACE  common.defs  config.md  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  external_plugin_deps_standalone.bzl  groups  owners_plugin_deps.lock.json  owners_third_party_runtime_jars.allowlist.txt  project.config
gerrit-owners/: BUCK
gerrit-owners-autoassign/: BUCK
gerrit-owners-autoassign/src/main/java/com/vmware/gerrit/owners/common/: AutoassignModule.java  GitRefListener.java  ReviewerManager.java  RunAsContext.java
gerrit-owners-common/: BUCK
gerrit-owners-common/src/main/java/com/vmware/gerrit/owners/common/: BlobUtils.java  ConfigurationParser.java  GitException.java  JgitWrapper.java  Matcher.java  OwnersConfig.java  OwnersMap.java  PathOwners.java  PathOwnersEntry.java  StreamUtils.java
gerrit-owners-common/src/test/java/com/vmware/gerrit/owners/common/: ClassicConfig.java  PathOwnersTest.java  RegexConfig.java  RegexTest.java
gerrit-owners/src/main/java/com/vmware/gerrit/owners/: OwnerPredicateProvider.java  OwnersStoredValues.java
gerrit-owners/src/main/java/gerrit_owners/: PRED_matcher_path_1.java  PRED_owner_2.java  PRED_owner_path_1.java
lib/gerrit-api/: BUILD
lib/prolog/: prolog.bzl
owners/: BUCK  BUILD  owners_third_party_runtime_jars.allowlist.txt
owners-api/: BUILD
owners-api/src/main/java/com/googlesource/gerrit/owners/api/: DefaultAddAllOwnersToAttentionSet.java  DefaultOwnersAttentionSet.java  OwnersApiModule.java  OwnersAttentionSet.java
owners-api/src/main/java/com/vmware/gerrit/owners/api/: OwnersApiModule.java  OwnersAttentionSet.java
owners-api/src/test/java/com/googlesource/gerrit/owners/api/: OwnersAttentionSetIT.java
owners-api/src/test/java/com/vmware/gerrit/owners/api/: OwnersAttentionSetIT.java
owners-autoassign/: BUCK  BUILD  owners-autoassign_third_party_runtime_jars.allowlist.txt
owners-autoassign/src/main/java/com/googlesource/gerrit/owners/common/: AsyncReviewerManager.java  AutoAssignConfig.java  AutoAssignConfigModule.java  AutoAssignModule.java  AutoassignConfig.java  AutoassignConfigModule.java  AutoassignModule.java  DefaultAddAllOwnersToAttentionSet.java  DefaultOwnersAttentionSet.java  GitRefListener.java  ReviewerManager.java  ReviewerManagerException.java  SyncReviewerManager.java
owners-autoassign/src/main/java/com/vmware/gerrit/owners/common/: AutoassignModule.java  Gerrit214ManualRequestContext.java  Gerrit214OneOffRequestContext.java  GitRefListener.java  OneOffRequestContext.java  ReviewerManager.java  ReviewerManagerException.java
owners-autoassign/src/main/resources/Documentation/: attention-set.md  auto-assign.md  config.md  setup.md
owners-autoassign/src/test/java/com/googlesource/gerrit/owners/common/: AbstractAutoassignIT.java  (+10 more)
owners-common/: BUCK  BUILD  common.bzl  common.defs  external_plugin_deps.bzl  owners  owners-autoassign
owners/src/main/java/com/googlesource/gerrit/owners/: AlreadyApprovedByOperand.java  AlreadyApprovedByOwnerOperand.java  AlreadyApprovedByOwnerPredicate.java  AlreadyApprovedByPredicate.java  AutoOwnersApproval.java  AutoOwnersApprovalFunctions.java  CompileStub.java  GetReview.java  LabelNotFoundException.java  MissingLabelAndScoreDefinitionException.java  OwnerPredicateProvider.java  OwnersApprovalHasPredicate.java  OwnersMetrics.java  OwnersModule.java  OwnersRestApiModule.java  OwnersStoredValues.java  OwnersSubmitRequirement.java  OwnersSubmitRule.java  PendingReview.java
owners/src/main/java/com/vmware/gerrit/owners/: CompileStub.java  OwnerPredicateProvider.java  OwnersModule.java  OwnersStoredValues.java
owners/src/main/java/gerrit_owners/: PRED_code_review_user_1.java  PRED_file_owners_2.java  PRED_matcher_owner_2.java  PRED_matcher_path_1.java  PRED_owner_2.java  PRED_owner_path_1.java
owners/src/main/prolog/: gerrit_owners.pl
owners/src/main/resources/Documentation/: config.md  copy-conditions.md  how-to-use.md  metrcis.md  metrics.md  rest-api.md
owners/src/test/java/com/googlesource/gerrit/owners/: AlreadyApprovedByCopyConditionIT.java  AlreadyApprovedByOwnersCopyConditionIT.java  OwnersApprovalHasOperandIT.java  OwnersITAbstract.java  OwnersMetricsIT.java  OwnersRegressionIT.java  OwnersSubmitRequirementIT.java  OwnersSubmitRequirementITAbstract.java  OwnersSubmitRequirementTest.java  OwnersSubmitRuleIT.java
owners/web/: BUILD  gerrit-model.ts  gr-files.ts  gr-files_test.ts  gr-owned-files.ts  gr-owned-files_test.ts  gr-owners.ts  gr-owners_test.ts  karma_test.sh  owners-mixin.ts  owners-model.ts  owners-service.ts  owners-service_test.ts  plugin.ts  tsconfig.json  utils.ts  web_test_runner.sh
plugins/: owners-api
src/main/java/com/googlesource/gerrit/owners/: AlreadyApprovedByPredicate.java  HttpModule.java  OwnerPredicateProvider.java  OwnersApprovalHasOperand.java  OwnersApprovalHasPredicate.java  OwnersMetrics.java  OwnersModule.java  OwnersRestApiModule.java  OwnersStoredValues.java  OwnersSubmitRequirement.java
src/main/java/com/googlesource/gerrit/owners/entities/: FilesOwnersResponse.java  GroupOwner.java  Owner.java
src/main/java/gerrit_owners/: PRED_code_review_user_1.java  PRED_file_owners_2.java  PRED_matcher_owner_2.java  PRED_matcher_path_1.java  PRED_owner_2.java  PRED_owner_path_1.java
src/main/prolog/: gerrit_owners.pl
src/main/resources/Documentation/: copy-conditions.md  how-to-use.md
src/test/java/com/googlesource/gerrit/owners/: OwnersApprovalHasOperandIT.java  OwnersMetricsIT.java  OwnersSubmitRequirementIT.java  OwnersSubmitRequirementITAbstract.java
src/test/java/com/googlesource/gerrit/owners/restapi/: GetFilesOwnersITAbstract.java  GetFilesOwnersSubmitRequirementsIT.java
tools/: workspace-status.sh
tools/bzl/: maven_jar.bzl  plugin.bzl
tools/eclipse/: BUILD  project.sh
web/: .eslintrc.js  BUILD  eslint.config.js  gerrit-model.ts  gr-files.ts  gr-files_test.ts  gr-owned-files_test.ts  owners-mixin.ts  owners-model.ts  owners-service.ts  owners-service_test.ts  plugin.ts  test-utils.ts
(+77 files in other folders)
