module(name = "gerrit-owners")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "owners_plugin_deps",
    artifacts = [
        # Runtime — jackson-dataformat-yaml transitively pulls jackson-databind
        # -> jackson-core + jackson-annotations, and snakeyaml.
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.3",
        # Test — easymock and javassist are pinned explicitly to override the
        # older versions that powermock-api-easymock (easymock 4.0.1) and
        # powermock-core (javassist 3.27.0-GA) would otherwise transitively
        # pull in. powermock-api-easymock and powermock-module-junit4
        # transitively pull powermock-api-support, powermock-core,
        # powermock-module-junit4-common, and powermock-reflect at 2.0.9.
        "org.easymock:easymock:5.4.0",
        "org.javassist:javassist:3.30.2-GA",
        "org.powermock:powermock-api-easymock:2.0.9",
        "org.powermock:powermock-module-junit4:2.0.9",
    ],
    duplicate_version_warning = "error",
    excluded_artifacts = [
        # Provided by Gerrit's PLUGIN_DEPS / runtime — exclude to keep the
        # plugin jar lean and avoid classpath duplication.
        "com.google.code.findbugs:jsr305",
        "com.google.errorprone:error_prone_annotations",
        "com.google.guava:failureaccess",
        "com.google.guava:guava",
        "com.google.j2objc:j2objc-annotations",
        "junit:junit",
        "org.checkerframework:checker-qual",
        "org.hamcrest:hamcrest-core",
        "org.ow2.asm:asm",
        "org.slf4j:slf4j-api",
    ],
    fail_if_repin_required = True,
    fail_on_missing_checksum = True,
    fetch_sources = True,
    lock_file = "//:owners_plugin_deps.lock.json",
    repositories = ["https://repo1.maven.org/maven2"],
    version_conflict_policy = "pinned",
)
use_repo(maven, "owners_plugin_deps")
